<resources>
    <string name="app_name">ToDoListManager</string>
    <string name="add_task_activity">AddTaskActivity</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_description">Edit Description</string>
    <string name="add_task">Add a new task</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="call_btn">Call Phone Number</string>

    <string name="task_completed">Task Completed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="show_prompt_dialog">Show Prompt Dialog</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
</resources>
