<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/activity_vertical_margin"
        app:cardElevation="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="326dp"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:hapticFeedbackEnabled="false"
            android:padding="6dip">

            <CheckBox
                android:id="@+id/item_comp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textColorLink="@android:color/holo_red_dark"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <!-- title -->
            <ImageButton
                android:id="@+id/remove_Btn"
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/delete_task"
                android:gravity="end"
                android:tint="@android:color/black"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

            <ImageButton
                android:id="@+id/edit_Btn"
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/item_comp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/edit_task"
                android:tint="@android:color/black"
                android:visibility="visible"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/item_comp"
                android:layout_toLeftOf="@+id/item_comp"
                android:layout_toRightOf="@+id/remove_Btn"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/title"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <!-- description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_toLeftOf="@+id/item_comp"
                android:layout_toRightOf="@+id/remove_Btn"
                android:layout_alignBottom="@+id/item_comp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/date_string"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/description"
                android:layout_below="@+id/description"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:text="@string/date_selected"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageButton
                android:id="@+id/call_Btn"
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="14dp"
                android:layout_toStartOf="@+id/edit_Btn"
                android:contentDescription="@string/call_btn"
                android:tint="@color/grassGreen"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>